syntax="proto3";

service PuppetMasterServerGrpcService {
	rpc Status (ServerStatusRequest) returns (ServerStatusReply);
	rpc Crash (CrashRequest) returns (CrashReply);
	rpc Freeze (FreezeRequest) returns (FreezeReply);
	rpc Unfreeze (UnfreezeRequest) returns (UnfreezeReply);
}

message ServerStatusRequest {

}

message ServerStatusReply {
	bool success = 1;
}

message CrashRequest {

}

message CrashReply {
	bool success = 1;
}

message FreezeRequest {

}

message FreezeReply {
	bool success = 1;
}

message UnfreezeRequest {

}

message UnfreezeReply {
	bool success = 1;
}